fixed aligning of the text

--- a/client/Wantlist/Wantlist.css
+++ b/client/Wantlist/Wantlist.css
@@ -57,6 +57,10 @@
 .release_info {
   display: table-cell;
   vertical-align: middle;
+  width: 100%;
+}
+.image_info {
+  width: 60px;
 }
 .label_info {
   color: #777;
